...
            fontSize: FontSize.s15,
            color: ColorManager.primary,
          ),
        ),
        SizedBox(height: AppHeight.h8),
        TrackingTextInput(
          key: const ValueKey("email_id"),
          hint: AppStrings.userName,
          textEditingController: _userNameController,
          isObscured: false,
          icon: IconButton(
            onPressed: () {},
            icon: Icon(
...
            fontSize: FontSize.s15,
            color: ColorManager.primary,
          ),
        ),
        SizedBox(height: AppHeight.h8),
        TrackingTextInput(
          key: const ValueKey("password"),
          hint: AppStrings.password,
          isObscured: !_passwordVisible,
          textEditingController: _passwordController,
          icon: IconButton(
            icon: Icon(
              _passwordVisible ? Icons.visibility : Icons.visibility_off,
...
